// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`transform-jsx 1. transforms basic native element: 1. transforms basic native element 1`] = `

const el = <div>Hello World</div>;

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerElement("div", {}, ["Hello World"]);

`;

exports[`transform-jsx 2. transforms nested native elements and strips blank whitespace: 2. transforms nested native elements and strips blank whitespace 1`] = `


const el = (
  <div className="container">
    <h1>Title</h1>
    <p>Description</p>
  </div>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerElement("div", {
  "className": "container"
}, [Cosmq.registerElement("h1", {}, ["Title"]), Cosmq.registerElement("p", {}, ["Description"])]);

`;

exports[`transform-jsx 3. transforms elements with self-closing tags and boolean attributes: 3. transforms elements with self-closing tags and boolean attributes 1`] = `

const el = <input type="text" disabled required readOnly />;

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerElement("input", {
  "type": "text",
  "disabled": true,
  "required": true,
  "readOnly": true
}, []);

`;

exports[`transform-jsx 4. transforms handle: namespaced event handlers: 4. transforms handle: namespaced event handlers 1`] = `

const el = <button handle:click={handleClick} handle:input={handleInput}>Submit</button>;

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerElement("button", {
  "handle:click": handleClick,
  "handle:input": handleInput
}, ["Submit"]);

`;

exports[`transform-jsx 5. transforms style attribute object: 5. transforms style attribute object 1`] = `

const el = <div style={{ color: "red", marginTop: "10px" }}>Styled</div>;

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerElement("div", {
  "style": {
    color: "red",
    marginTop: "10px"
  }
}, ["Styled"]);

`;

exports[`transform-jsx 6. transforms custom component with Capitalized tag: 6. transforms custom component with Capitalized tag 1`] = `

const el = <CustomButton size="large" variant="primary">Click</CustomButton>;

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerComponent("CustomButton", CustomButton, {
  "size": "large",
  "variant": "primary",
  "children": ["Click"]
});

`;

exports[`transform-jsx 7. resolves component tag to local Component_ declaration: 7. resolves component tag to local Component_ declaration 1`] = `


const Component_Project = ({ item }) => <div>{item}</div>;
const el = <Project item="Cosmq" />;
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Project = ({
  item
}) => Cosmq.registerElement("div", {}, [item]);
const el = Cosmq.registerComponent("Project", Component_Project, {
  "item": "Cosmq",
  "children": []
});

`;

exports[`transform-jsx 8. transforms component passing children to children property: 8. transforms component passing children to children property 1`] = `


const el = (
  <Card title="Overview">
    <Button>Close</Button>
  </Card>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.registerComponent("Card", Card, {
  "title": "Overview",
  "children": [Cosmq.registerComponent("Button", Button, {
    "children": ["Close"]
  })]
});

`;

exports[`transform-jsx 9. handles function declaration for Component_: 9. handles function declaration for Component_ 1`] = `


function Component_Header({ title }) {
  return <h1>{title}</h1>;
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

function Component_Header({
  title
}) {
  return Cosmq.registerElement("h1", {}, [title]);
}

`;

exports[`transform-jsx 10. transforms ReactiveList with key, data, and render function: 10. transforms ReactiveList with key, data, and render function 1`] = `


const el = (
  <ReactiveList data={items} key={(item) => item.id}>
    {(item, i) => (
      <li id={item.id} index={i}>
        <span>{item.name}</span>
      </li>
    )}
  </ReactiveList>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

const el = Cosmq.reactiveList(items, {
  getKey: item => item.id
}, _Cosmq_element__ => Cosmq.registerElement("li", {
  "id": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
    return _Cosmq_element__.value.id;
  }, [_Cosmq_element__]),
  "index": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
    return _Cosmq_element__.value._Cosmq_index__;
  }, [_Cosmq_element__])
}, [Cosmq.registerElement("span", {}, [{Cosmq.compute(() => _Cosmq_element__.value.name, [_Cosmq_element__])}])]));

`;

exports[`transform-jsx 11. does not rewrite data observable to .value inside ReactiveList prop: 11. does not rewrite data observable to .value inside ReactiveList prop 1`] = `


const Component_TodoList = () => {
  const items = observe([]);
  return (
    <ReactiveList data={items} key={(item) => item.id}>
      {(item) => <div>{item.name}</div>}
    </ReactiveList>
  );
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_TodoList = () => {
  const items = observe([]);
  return Cosmq.reactiveList(items, {
    getKey: item => item.id
  }, _Cosmq_element__ => Cosmq.registerElement("div", {}, [Cosmq.compute(() => _Cosmq_element__.value.name, [_Cosmq_element__])]));
};

`;

exports[`transform-jsx 12. wraps observable binary expression in JSX container with Cosmq.compute: 12. wraps observable binary expression in JSX container with Cosmq.compute 1`] = `


const Component_Counter = () => {
  const count = observe(0);
  return <div>{count + 1}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Counter = () => {
  const count = observe(0);
  return Cosmq.registerElement("div", {}, [Cosmq.compute(() => count.value + 1, [count])]);
};

`;

exports[`transform-jsx 13. wraps observable template literal in JSX with Cosmq.compute: 13. wraps observable template literal in JSX with Cosmq.compute 1`] = `


const Component_Greeting = () => {
  const name = observe("World");
  return <div>{\`Hello, \${name}!\`}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Greeting = () => {
  const name = observe("World");
  return Cosmq.registerElement("div", {}, [Cosmq.compute(() => \`Hello, \${name.value}!\`, [name])]);
};

`;

exports[`transform-jsx 14. wraps dynamic JSX attribute dependent on observable with Cosmq.compute: 14. wraps dynamic JSX attribute dependent on observable with Cosmq.compute 1`] = `


const Component_Card = () => {
  const isActive = observe(true);
  return <div className={isActive ? "active" : "inactive"}>Card</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Card = () => {
  const isActive = observe(true);
  return Cosmq.registerElement("div", {
    "className": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return isActive.value ? "active" : "inactive";
    }, [isActive])
  }, ["Card"]);
};

`;

exports[`transform-jsx 15. wraps logical expression in JSX container with Cosmq.compute: 15. wraps logical expression in JSX container with Cosmq.compute 1`] = `


const Component_Gate = () => {
  const hasItems = observe(true);
  return <div>{hasItems && <span>Items available</span>}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Gate = () => {
  const hasItems = observe(true);
  return Cosmq.registerElement("div", {}, [Cosmq.compute(() => hasItems.value && Cosmq.registerElement("span", {}, ["Items available"]), [hasItems])]);
};

`;

exports[`transform-jsx 16. wraps ternary expression in JSX container with Cosmq.compute: 16. wraps ternary expression in JSX container with Cosmq.compute 1`] = `


const Component_Status = () => {
  const isReady = observe(false);
  return <div>{isReady ? <span>Ready</span> : <span>Waiting</span>}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Status = () => {
  const isReady = observe(false);
  return Cosmq.registerElement("div", {}, [Cosmq.compute(() => isReady.value ? Cosmq.registerElement("span", {}, ["Ready"]) : Cosmq.registerElement("span", {}, ["Waiting"]), [isReady])]);
};

`;

exports[`transform-jsx 17. transforms reactive variable declaration containing observable to Cosmq.compute: 17. transforms reactive variable declaration containing observable to Cosmq.compute 1`] = `


const Component_Derived = () => {
  const count = observe(0);
  const total = count + 10;
  return <div>{total}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Derived = () => {
  const count = observe(0);
  const total = count.value + 10;
  return Cosmq.registerElement("div", {}, [total]);
};

`;

exports[`transform-jsx 18. transforms observable assignment to .set() method call: 18. transforms observable assignment to .set() method call 1`] = `


const Component_Counter = () => {
  const count = observe(0);
  const inc = () => {
    count = count + 1;
  };
  return <button handle:click={inc}>Increment</button>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Counter = () => {
  const count = observe(0);
  const inc = () => {
    count.set(count.value + 1);
  };
  return Cosmq.registerElement("button", {
    "handle:click": inc
  }, ["Increment"]);
};

`;

exports[`transform-jsx 19. transforms observable access to .value when read inside function: 19. transforms observable access to .value when read inside function 1`] = `


const Component_Viewer = () => {
  const text = observe("hello");
  const log = () => {
    console.log(text);
  };
  return <div>Viewer</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Viewer = () => {
  const text = observe("hello");
  const log = () => {
    console.log(text.value);
  };
  return Cosmq.registerElement("div", {}, ["Viewer"]);
};

`;

exports[`transform-jsx 20. does not transform observable to .value when returned directly: 20. does not transform observable to .value when returned directly 1`] = `


const Component_Raw = () => {
  const count = observe(10);
  return count;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Raw = () => {
  const count = observe(10);
  return count;
};

`;

exports[`transform-jsx 21. transforms destructured component props access to getPropValue: 21. transforms destructured component props access to getPropValue 1`] = `


const Component_Header = ({ title }) => {
  return <h1>{title}</h1>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Header = ({
  title
}) => {
  return Cosmq.registerElement("h1", {}, [title]);
};

`;

exports[`transform-jsx 22. transforms props destructured in function body to getPropValue: 22. transforms props destructured in function body to getPropValue 1`] = `


const Component_Card = (props) => {
  const { title } = props;
  return <h1>{title}</h1>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Card = props => {
  const {
    title
  } = props;
  return Cosmq.registerElement("h1", {}, [title]);
};

`;

exports[`transform-jsx 23. treats component props as reactive dependencies in expressions: 23. treats component props as reactive dependencies in expressions 1`] = `


const Component_Item = ({ count }) => {
  return <div>{count + 1}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Item = ({
  count
}) => {
  return Cosmq.registerElement("div", {}, [Cosmq.compute(() => Cosmq.getPropValue(count) + 1, [count])]);
};

`;

exports[`transform-jsx 24. automatically infers dependencies for compute shorthand: 24. automatically infers dependencies for compute shorthand 1`] = `


const Component_Stats = () => {
  const a = observe(1);
  const b = observe(2);
  const sum = compute(() => a + b / b - a / 2);
  return <div>{sum}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Stats = () => {
  const a = observe(1);
  const b = observe(2);
  const sum = compute(() => a.value + b.value / b.value - a.value / 2, [a, b]);
  return Cosmq.registerElement("div", {}, [sum]);
};

`;

exports[`transform-jsx 25. preserves explicitly provided dependencies for compute: 25. preserves explicitly provided dependencies for compute 1`] = `


const Component_ExplicitCompute = () => {
  const a = observe(1);
  const b = observe([1,2,4,5])
  const computedValue = compute(() => {
    const innerVar = a * 2
    const innerVar2 = b[1]
    const innerVar3 = b[a]
    return 2 / a * (4 + innerVar2) + innerVar2[3] + innerVar3
  });

  compute(() => {
    const innerVar = a * 2
    const innerVar2 = b[1]
    const innerVar3 = b[a]
    return 2 / a * (4 + innerVar2) + innerVar2[3] + innerVar3
  });


  return <div>{computedValue}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_ExplicitCompute = () => {
  const a = observe(1);
  const b = observe([1, 2, 4, 5]);
  const computedValue = compute(() => {
    const innerVar = a.value * 2;
    const innerVar2 = b.value[1];
    const innerVar3 = b.value[a.value];
    return 2 / a.value * (4 + innerVar2) + innerVar2[3] + innerVar3;
  }, [a, b]);
  compute(() => {
    const innerVar = a.value * 2;
    const innerVar2 = b.value[1];
    const innerVar3 = b.value[a.value];
    return 2 / a.value * (4 + innerVar2) + innerVar2[3] + innerVar3;
  }, [a, b]);
  return Cosmq.registerElement("div", {}, [computedValue]);
};

`;

exports[`transform-jsx 26. automatically infers dependencies for effect shorthand: 26. automatically infers dependencies for effect shorthand 1`] = `


const Component_EffectDemo = () => {
  const count = observe(0);
  effect(() => {
    console.log(count);
  });
  return <div>Demo</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_EffectDemo = () => {
  const count = observe(0);
  effect(() => {
    console.log(count.value);
  }, [count]);
  return Cosmq.registerElement("div", {}, ["Demo"]);
};

`;

exports[`transform-jsx 27. preserves explicitly provided dependencies for effect: 27. preserves explicitly provided dependencies for effect 1`] = `


const Component_ExplicitEffect = () => {
  const count = observe(0);
  effect(() => {
    console.log(count);
  }, [count]);
  return <div>Demo</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_ExplicitEffect = () => {
  const count = observe(0);
  effect(() => {
    console.log(count.value);
  }, [count]);
  return Cosmq.registerElement("div", {}, ["Demo"]);
};

`;

exports[`transform-jsx 28. transforms $ shorthand alias to compute with dependencies: 28. transforms $ shorthand alias to compute with dependencies 1`] = `


const Component_AliasDemo = () => {
  const count = observe(5);
  const doubled = $(() => count * 2);
  return <div>{doubled}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_AliasDemo = () => {
  const count = observe(5);
  const doubled = compute(() => count.value * 2, [count]);
  return Cosmq.registerElement("div", {}, [doubled]);
};

`;

exports[`transform-jsx 29. removes nested compute inside JSX attribute: 29. removes nested compute inside JSX attribute 1`] = `


const Component_Nested = () => {
  const active = observe(true);
  return <div className={compute(() => (active ? "active" : "inactive"))} />;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Nested = () => {
  const active = observe(true);
  return Cosmq.registerElement("div", {
    "className": compute(() => active.value ? "active" : "inactive", [active])
  }, []);
};

`;

exports[`transform-jsx 30. define Context: 30. define Context 1`] = `


const Store = createContext({
    a: 1,
    b: 2,
    c: 0,
    d: {a: 1},
    e: [1, 2, 3],
})

const actionA = () => {
    const c = store.a + store.b;
    return c 
}

function actionB() {
    const c = store.a + store.b;
    return c 
}


      ↓ ↓ ↓ ↓ ↓ ↓

const Store = createContext({
  a: 1,
  b: 2,
  c: 0,
  d: {
    a: 1
  },
  e: [1, 2, 3]
});
const actionA = () => {
  const c = store.a + store.b;
  return c;
};
function actionB() {
  const c = store.a + store.b;
  return c;
}

`;

exports[`transform-jsx 31. import Context: 31. import Context 1`] = `


const Component_SomeComponent = () => {
  const ctx = loadContext()
  const reassigned = ctx.c;
  const test_compute = compute(ctx.a + ctx.b)

  const handleMouseDown = () => {
    ctx.c = ctx.a + ctx.b
  }
  
  return (
    <div 
      handle:click={() => {
        ctx.b = ctx.a / ctx.b;
      }}
      handle:mousedown={handleMouseDown}
      style={{
        opacity: ctx.b + ctx.a,
        position: ctx.c
      }}
    >Hello World
    </div>
  )
};


      ↓ ↓ ↓ ↓ ↓ ↓

const Component_SomeComponent = () => {
  const ctx = loadContext();
  const _Cosmq_Context__ctx_b = ctx.b;
  const _Cosmq_Context__ctx_a = ctx.a;
  const _Cosmq_Context__ctx_c = ctx.c;
  const reassigned = _Cosmq_Context__ctx_c;
  const test_compute = compute(() => _Cosmq_Context__ctx_a.value + _Cosmq_Context__ctx_b.value, [_Cosmq_Context__ctx_a, _Cosmq_Context__ctx_b]);
  const handleMouseDown = () => {
    _Cosmq_Context__ctx_c.set(_Cosmq_Context__ctx_a.value + _Cosmq_Context__ctx_b.value);
  };
  return Cosmq.registerElement("div", {
    "handle:click": () => {
      _Cosmq_Context__ctx_b.set(_Cosmq_Context__ctx_a.value / _Cosmq_Context__ctx_b.value);
    },
    "handle:mousedown": handleMouseDown,
    "style": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return {
        opacity: _Cosmq_Context__ctx_b.value + _Cosmq_Context__ctx_a.value,
        position: _Cosmq_Context__ctx_c.value
      };
    }, [_Cosmq_Context__ctx_b, _Cosmq_Context__ctx_a, _Cosmq_Context__ctx_c])
  }, ["Hello World\\n    "]);
};

`;

exports[`transform-jsx 32. destructured Context: 32. destructured Context 1`] = `


const Component_SomeComponent = () => {
  const {c,a,b,d,e} = loadContext()
  const reassigned = c;
  const test_compute = compute(a + b)

  const handleMouseDown = () => {
    c = a + b
  }
  
  return (
    <div 
      handle:click={() => {
        b = a / b;
      }}
      handle:mousedown={handleMouseDown}
      style={{
        opacity: b + a,
        position: c
      }}
    >Hello World
    </div>
  )
};


      ↓ ↓ ↓ ↓ ↓ ↓

const Component_SomeComponent = () => {
  const {
    c,
    a,
    b,
    d,
    e
  } = loadContext();
  const _Cosmq_Context___destructured_b = b;
  const _Cosmq_Context___destructured_a = a;
  const _Cosmq_Context___destructured_c = c;
  const reassigned = _Cosmq_Context___destructured_c;
  const test_compute = compute(() => _Cosmq_Context___destructured_a.value + _Cosmq_Context___destructured_b.value, [_Cosmq_Context___destructured_a, _Cosmq_Context___destructured_b]);
  const handleMouseDown = () => {
    _Cosmq_Context___destructured_c.set(_Cosmq_Context___destructured_a.value + _Cosmq_Context___destructured_b.value);
  };
  return Cosmq.registerElement("div", {
    "handle:click": () => {
      _Cosmq_Context___destructured_b.set(_Cosmq_Context___destructured_a.value / _Cosmq_Context___destructured_b.value);
    },
    "handle:mousedown": handleMouseDown,
    "style": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return {
        opacity: _Cosmq_Context___destructured_b.value + _Cosmq_Context___destructured_a.value,
        position: _Cosmq_Context___destructured_c.value
      };
    }, [_Cosmq_Context___destructured_b, _Cosmq_Context___destructured_a, _Cosmq_Context___destructured_c])
  }, ["Hello World\\n    "]);
};

`;

exports[`transform-jsx 33. Infers ReactiveList: 33. Infers ReactiveList 1`] = `



const Component_Project = ({items}) => {
  const items2 = observe([{id: 1, name: "test"},{id: 2, name: "test2"}])
  const activeItem = observe(null)

  return (
    <div>
      {items.map(item => (
        <div key={item.id}>
          {item.name}
        </div>
      ))}

      {items2.map(({id, name}, i) => {
        return (
          <div key={id} style={{
            opacity: activeItem?.id === id ? 1 * i : 0.3,
            size: i
          }}>
            {name}
          </div>
          )
        }
      )}
    </div>
  );
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_Project = ({
  items
}) => {
  const items2 = observe([{
    id: 1,
    name: "test"
  }, {
    id: 2,
    name: "test2"
  }]);
  const activeItem = observe(null);
  return Cosmq.registerElement("div", {}, [/*COSMQ - Injected ReactiveList*/Cosmq.reactiveList(items, {
    getKey: item => item.id
  }, _Cosmq_element__ => Cosmq.registerElement("div", {
    "key": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return _Cosmq_element__.value.id;
    }, [_Cosmq_element__])
  }, [Cosmq.compute(() => _Cosmq_element__.value.name, [_Cosmq_element__])])), /*COSMQ - Injected ReactiveList*/Cosmq.reactiveList(items2, {
    getKey: (_props, i) => _props.id
  }, _Cosmq_element__ => {
    return Cosmq.registerElement("div", {
      "key": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
        return _Cosmq_element__.value.id;
      }, [_Cosmq_element__]),
      "style": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
        return {
          opacity: activeItem.value?.id === _Cosmq_element__.value.id ? 1 * _Cosmq_element__.value._Cosmq_index__ : 0.3,
          size: _Cosmq_element__.value._Cosmq_index__
        };
      }, [activeItem, _Cosmq_element__])
    }, [Cosmq.compute(() => _Cosmq_element__.value.name, [_Cosmq_element__])]);
  })]);
};

`;

exports[`transform-jsx 34. transforms simple IF conditional in JSX: 34. transforms simple IF conditional in JSX 1`] = `

const show = true; <div>{IF(show)(<span>Visible</span>)}</div>;

      ↓ ↓ ↓ ↓ ↓ ↓

const show = true;
Cosmq.registerElement("div", {}, [Cosmq.conditional([show], [{
  "__condition__": () => show,
  "body": () => (Cosmq.registerElement("span", {}, ["Visible"]))
}])]);

`;

exports[`transform-jsx 35. transforms IF and ELSE conditional: 35. transforms IF and ELSE conditional 1`] = `


const isLoggedIn = observe(false);
<div>
  {IF(isLoggedIn)(<span>Welcome back!</span>)}
  {ELSE()(<span>Please log in.</span>)}
</div>;
      

      ↓ ↓ ↓ ↓ ↓ ↓

const isLoggedIn = observe(false);
Cosmq.registerElement("div", {}, [Cosmq.conditional([isLoggedIn], [{
  "__condition__": () => isLoggedIn.value,
  "body": () => (Cosmq.registerElement("span", {}, ["Welcome back!"]))
}, {
  "__condition__": () => true,
  "body": () => (Cosmq.registerElement("span", {}, ["Please log in."]))
}])]);

`;

exports[`transform-jsx 36. transforms IF, ELSEIF, and ELSE conditional chain: 36. transforms IF, ELSEIF, and ELSE conditional chain 1`] = `


const status = observe("loading");
<div>
  {IF(status === "loading")(<span>Loading...</span>)}
  {ELSEIF(status === "error")(<span>Error occurred!</span>)}
  {ELSE()(<span>Ready</span>)}
</div>;
      

      ↓ ↓ ↓ ↓ ↓ ↓

const status = observe("loading");
Cosmq.registerElement("div", {}, [Cosmq.conditional([status], [{
  "__condition__": () => status.value === "loading",
  "body": () => (Cosmq.registerElement("span", {}, ["Loading..."]))
}, {
  "__condition__": () => status.value === "error",
  "body": () => (Cosmq.registerElement("span", {}, ["Error occurred!"]))
}, {
  "__condition__": () => true,
  "body": () => (Cosmq.registerElement("span", {}, ["Ready"]))
}])]);

`;

exports[`transform-jsx 37. collects multiple observable dependencies in condition: 37. collects multiple observable dependencies in condition 1`] = `


const isReady = observe(true);
const count = observe(5);
<div>
  {IF(isReady && count > 0)(<div>Active with items</div>)}
</div>;
      

      ↓ ↓ ↓ ↓ ↓ ↓

const isReady = observe(true);
const count = observe(5);
Cosmq.registerElement("div", {}, [Cosmq.conditional([isReady, count], [{
  "__condition__": () => isReady.value && count.value > 0,
  "body": () => (Cosmq.registerElement("div", {}, ["Active with items"]))
}])]);

`;

exports[`transform-jsx 38. handles multiple independent conditional blocks in same element: 38. handles multiple independent conditional blocks in same element 1`] = `


const a = observe(true);
const b = observe(false);
<div>
  {IF(a)(<span>A</span>)}
  <hr />
  {IF(b)(<span>B</span>)}
  {ELSE()(<span>Not B</span>)}
</div>;
      

      ↓ ↓ ↓ ↓ ↓ ↓

const a = observe(true);
const b = observe(false);
Cosmq.registerElement("div", {}, [Cosmq.conditional([a], [{
  "__condition__": () => a.value,
  "body": () => (Cosmq.registerElement("span", {}, ["A"]))
}]), Cosmq.registerElement("hr", {}, []), Cosmq.conditional([b], [{
  "__condition__": () => b.value,
  "body": () => (Cosmq.registerElement("span", {}, ["B"]))
}, {
  "__condition__": () => true,
  "body": () => (Cosmq.registerElement("span", {}, ["Not B"]))
}])]);

`;

exports[`transform-jsx 39. Access nested obserable values: 39. Access nested obserable values 1`] = `


const Component_test = ({users}) => {
  const data = observe({
    name: "",
    age: "",
    address: ""
  })

 console.log(users[0].name)

  return (
    <div>
      <input value={data.name} handle:input={(e) => {
        data = {...data, name: e.target.value}
      }} />
      <input value={data.age} handle:input={(e) => {
          data = {...data, age: e.target.value}
      }} />
      <input value={data.address} handle:input={(e) => {
          data = {...data, address: e.target.value}
      }} />
      <button disabled={data.age === "" || data.name === "" || data.address === ""} handle:click={() => {
        
      }}>Update</button>
    </div>
  )
}


      ↓ ↓ ↓ ↓ ↓ ↓

const Component_test = ({
  users
}) => {
  const data = observe({
    name: "",
    age: "",
    address: ""
  });
  console.log(Cosmq.getPropValue(users)[0].name);
  return Cosmq.registerElement("div", {}, [Cosmq.registerElement("input", {
    "value": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return data.value.name;
    }, [data]),
    "handle:input": e => {
      data.set({
        ...data.value,
        name: e.target.value
      });
    }
  }, []), Cosmq.registerElement("input", {
    "value": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return data.value.age;
    }, [data]),
    "handle:input": e => {
      data.set({
        ...data.value,
        age: e.target.value
      });
    }
  }, []), Cosmq.registerElement("input", {
    "value": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return data.value.address;
    }, [data]),
    "handle:input": e => {
      data.set({
        ...data.value,
        address: e.target.value
      });
    }
  }, []), Cosmq.registerElement("button", {
    "disabled": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return data.value.age === "" || data.value.name === "" || data.value.address === "";
    }, [data]),
    "handle:click": () => {}
  }, ["Update"])]);
};

`;

exports[`transform-jsx 40. Access nested obserable values 4: 40. Access nested obserable values 4 1`] = `


        const Component_AddModal = ({ onSubmit, onCancel }) => {
  // const name = observe("");
  // const birthDay = observe("");
  // const profession = observe("");

  const user = observe({
    name: "",
    birthDay: "",
    profession: "",
  })

  const handleSubmit = () => {
    onSubmit(user)
  }

  return (
    <div>

      <div>
        <button
          className="alt"
          handle:click={() => { addModalActive = true }}
        >
          X
        </button>

      </div>
      <form style={{ display: "flex", flexDirection: "row", gap: "10px" }}>
        <div style={{ display: "flex", flexDirection: "row", gap: "10px" }}>
          <label>Name</label>
          <input
            id="name"
            value={user.name}
            handle:input={(e) => user = { ...user, name: e.target.value }}
          />
        </div>


        <div style={{ display: "flex", flexDirection: "row", gap: "10px" }}>
          <label>Birth Day</label>
          <input
            id="name"
            value={user.birthDay}
            handle:input={(e) => user = { ...user, birthDay: e.target.value }}
          />
        </div>

        <div style={{ display: "flex", flexDirection: "row", gap: "10px" }}>
          <label>Profession</label>
          <input
            id="name"
            value={user.profession}
            handle:input={(e) => user = { ...user, profession: e.target.value }}
          />
        </div>

        <button
          disabled={
            user.name === "" ||
            user.birthDay === "" ||
            user.profession === ""
          }

          handle:click={handleSubmit}>submit</button>
      </form >
    </div>
  )
}
        

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_AddModal = ({
  onSubmit,
  onCancel
}) => {
  // const name = observe("");
  // const birthDay = observe("");
  // const profession = observe("");

  const user = observe({
    name: "",
    birthDay: "",
    profession: ""
  });
  const handleSubmit = () => {
    Cosmq.getPropValue(onSubmit)(user.value);
  };
  return Cosmq.registerElement("div", {}, [Cosmq.registerElement("div", {}, [Cosmq.registerElement("button", {
    "className": "alt",
    "handle:click": () => {
      addModalActive = true;
    }
  }, ["\\n          X\\n        "])]), Cosmq.registerElement("form", {
    "style": {
      display: "flex",
      flexDirection: "row",
      gap: "10px"
    }
  }, [Cosmq.registerElement("div", {
    "style": {
      display: "flex",
      flexDirection: "row",
      gap: "10px"
    }
  }, [Cosmq.registerElement("label", {}, ["Name"]), Cosmq.registerElement("input", {
    "id": "name",
    "value": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return user.value.name;
    }, [user]),
    "handle:input": e => user.set({
      ...user.value,
      name: e.target.value
    })
  }, [])]), Cosmq.registerElement("div", {
    "style": {
      display: "flex",
      flexDirection: "row",
      gap: "10px"
    }
  }, [Cosmq.registerElement("label", {}, ["Birth Day"]), Cosmq.registerElement("input", {
    "id": "name",
    "value": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return user.value.birthDay;
    }, [user]),
    "handle:input": e => user.set({
      ...user.value,
      birthDay: e.target.value
    })
  }, [])]), Cosmq.registerElement("div", {
    "style": {
      display: "flex",
      flexDirection: "row",
      gap: "10px"
    }
  }, [Cosmq.registerElement("label", {}, ["Profession"]), Cosmq.registerElement("input", {
    "id": "name",
    "value": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return user.value.profession;
    }, [user]),
    "handle:input": e => user.set({
      ...user.value,
      profession: e.target.value
    })
  }, [])]), Cosmq.registerElement("button", {
    "disabled": /*COSMQ - Injected Computed wrapper*/Cosmq.compute(() => {
      return user.value.name === "" || user.value.birthDay === "" || user.value.profession === "";
    }, [user]),
    "handle:click": handleSubmit
  }, ["submit"])])]);
};

`;

exports[`transform-jsx 41. allows for deeply nested observables: 41. allows for deeply nested observables 1`] = `


const Component_DeeplyNested = () => {
  const user = observe({
    address: {
      line1: "123 Main St",
      line2: "Apt 4B",
      city: "New York",
      state: "NY",
      zip: "10001",
      country: {
        name: "USA",
        code: "1"
      }
    }
  });

  const onClick = () => {
    user = {...user, address: {country: {code: "2"}}}
  }


  return <div handle:click={onClick}>{user.address.country.code}</div>;
};
      

      ↓ ↓ ↓ ↓ ↓ ↓

const Component_DeeplyNested = () => {
  const user = observe({
    address: {
      line1: "123 Main St",
      line2: "Apt 4B",
      city: "New York",
      state: "NY",
      zip: "10001",
      country: {
        name: "USA",
        code: "1"
      }
    }
  });
  const onClick = () => {
    user.set({
      ...user.value,
      address: {
        country: {
          code: "2"
        }
      }
    });
  };
  return Cosmq.registerElement("div", {
    "handle:click": onClick
  }, [Cosmq.compute(() => user.value.address.country.code, [user])]);
};

`;
